Fix layout issue caused by loading screen.

--- a/src/Layout.css
+++ b/src/Layout.css
@@ -6,4 +6,11 @@
 
 .page-content {
     flex: 1;
+    flex-direction: column;
+    display: flex;
+}
+
+.smth {
+    flex: 1;
+    display: flex;
 }
